--- a/starview_frontend/src/styles/global.css
+++ b/starview_frontend/src/styles/global.css
@@ -48,8 +48,8 @@
   --star-empty: #334155;
 
   /* Favorite/Heart */
-  --favorite: #ef4444;
-  --favorite-hover: #dc2626;
+  --favorite: #ec4899;
+  --favorite-hover: #db2777;
 
   /* Elevation indicator */
   --elevation: #f87171;
